small change to statistical inference notes

--- a/modules/0204_statistical_inference/00_notes/0204_stastical_inference.Rmd
+++ b/modules/0204_statistical_inference/00_notes/0204_stastical_inference.Rmd
@@ -842,7 +842,7 @@ wilcox.test(data$Before, data$After, paired = TRUE, alternative = "less")
 
 
 
-## Kruskal Wallis Test
+## Kruskal-Wallis Test
 
 \vspace{1.5em}
 
